# fairytalesai

./: CNAME  README.md  index.html  integration-example.js  prompt.txt  prompt_example.md  script.js  styles.css
tale-generator/: .dockerignore  .env.example  .env.example.redis  APPLY_ANONYMOUS_CHECK_MIGRATION.md  APPLY_GENERATIONS_ACCESS_MIGRATION.md  ASYNC_IMPLEMENTATION_CHECKLIST.md  ASYNC_SUMMARY.md  ASYNC_TRANSFORMATION_COMPLETE.md  AUDIO_FILENAME_IMPROVEMENT.md  AUTHORIZATION_FIX_SUMMARY.md  COMBINED_STORY_IMPLEMENTATION.md  CONTENT_CLEANING_IMPLEMENTATION.md  DEBUG_GENERATIONS_404.md  Dockerfile  EDGE_FUNCTION_FIX.md  FRONTEND_DEPLOYMENT_GUIDE.md  FRONTEND_IMPLEMENTATION_SUMMARY.md  FRONTEND_QUICK_START.md  GENERATE_STORY_ENDPOINT_README.md  GENERATIONS_TABLE_IMPLEMENTATION.md  ICON_REMOVAL_SUMMARY.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_STATUS.md  IMPLEMENTATION_STATUS_AUTH_FIX.md  IMPLEMENTATION_SUMMARY.md  IOS_API_DOCUMENTATION.md  LANGGRAPH_IMPLEMENTATION_SUMMARY.md  LANGGRAPH_QUICK_START.md  MODEL_CONFIGURATION.md  PROMPT_MODULE_IMPLEMENTATION.md  PROMPT_SYSTEM_DOCUMENTATION.md  PURCHASE_SYSTEM_QUICK_START.md  QUICKSTART_REDIS_CACHE.md  QUICK_START.md  QUICK_START_COMBINED_STORIES.md  QUICK_START_STORY_TYPES.md  README.md  README_manage_stories.md  REDIS_CACHE_IMPLEMENTATION_SUMMARY.md  REDIS_CACHE_README.md  (+79 more)
tale-generator/docs/: VOICE_PROVIDERS.md
tale-generator/frontend/: README.md  index.html  package-lock.json  package.json  tailwind.config.js
tale-generator/src/: elevenlabs_client.py  logging_config_old.py  models.py  openrouter_client.py  (+8 more)
(+467 files in other folders)
